k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-api
  labels:
    app: incident-api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-api
  template:
    metadata:
      labels:
        app: incident-api
    spec:
      containers:
        - name: incident-api
          image: manel2024/incident-reporter-api:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
      volumes:
        - name: data-volume
          emptyDir: {}
