k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-frontend
  labels:
    app: incident-frontend  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-frontend
  template:
    metadata:
      labels:
        app: incident-frontend
    spec:
      containers:
        - name: incident-frontend
          image: manel2024/incident-reporter-frontend:latest
          ports:
            - containerPort: 80
