k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-api-service
spec:
  selector:
    app: incident-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31279
  type: NodePort
