k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-frontend-service
spec:
  selector:
    app: incident-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
